# buchstabensuppe

./: .gitattributes  .gitignore  COPYING  Makefile  README.md  bitmap.c  bs-renderflipdot.1.html  bs-renderflipdot.c  buchstabensuppe.c  buchstabensuppe.h  build_config  default.exe.do  default.nix  default.o.do  demo.c  flipdot.c  index.html  libbuchstabensuppe.a.do  meson.build  overlay.nix  stb_truetype.c  style.css  test.c  util.h
.github/workflows/: ci.yml  deploy-doc.yml
bindings/hs/: CHANGELOG.md  haskell-buchstabensuppe.cabal  shell.nix
bindings/hs/cbits/: buchstabensuppe-wrapper.c  buchstabensuppe-wrapper.h
bindings/hs/src/Graphics/: Buchstabensuppe.hs
bindings/hs/src/Graphics/Buchstabensuppe/Buffer/: UTF32.hsc
bindings/hs/test/: Main.hs
bindings/hs/test/Test/Buchstabensuppe/: Buffers.hs
doc/: web.nix
doc/man/: bs-renderflipdot.1
include/: buchstabensuppe.h
include/buchstabensuppe/: bitmap.h  flipdot.h
man/: bs-renderflipdot.1.html
readme/: README.html  bs-renderflipdot.c
